# kos-kbot

./: .gitignore  Cargo.toml  Cross.toml  Makefile  README.md  inputs.csv  outputs.csv  power_readings.csv
.cargo/: config.toml
.github/workflows/: publish.yml  pull_request_template.md  test.yml
demos/: boxing.py  config_actuator.py  disable.py  freeze.py  multiple_moves.py  photo_pose.py  quick.py  read_motors.py  salute.py  simple_arm.py  stand.py  test_hand.py  test_torque.py  torque.py  wave.py
models/: night_before.kinfer
scripts/: auto_zero.py  disable.py  freeze_legs.py  go_to_zero.py  grav.py  log_imu.py  log_imu_freq.py  measure_orn.py  move_motor.py  power_readings.csv  powerboard.py  read_imu.py  read_motors.py  sin_test.py  sine_wave_test.py  test.py  walk.py  walk_old.py  zero_in_place.py
src/: actuator.rs  hexmove.rs  hiwonder.rs  hiwonderimu.rs  inspirehand.rs  lib.rs  main.rs  process_manager.rs  proxyactuator.rs  rh56actuator.rs  rsactuator.rs
src/kbot_imu/: bno055.rs  hexmove.rs  hiwonder.rs  mod.rs
