[package]
name = "kos-kbot"
version = "0.1.3"
authors = [
    "Benjamin Bolte <ben@kscale.dev>",
    "Denys Bezmenov <denys@kscale.dev>",
    "Jingxiang Mo <jx@kscale.dev>",
    "Pawel Budzianowski <pawel@kscale.dev>",
    "Wesley Maa <wesley@kscale.dev>",
]
edition = "2021"
license = "MIT"
repository = "https://github.com/kscalelabs/kos-kbot"
description = "KOS platform for KBot"

[dependencies]
serialport = "4.7"
eyre = "0.6"
tracing = "0.1"
async-trait = "0.1"
robstride = { version = "0.3.4", features = ["instant_command"] }
serde_json = "1.0"
uuid = { version = "1", features = ["v4"] }
tokio = { version = "1", features = ["full", "tracing"] }
tracing-subscriber = "0.3"
[target.'cfg(target_os = "linux")'.dependencies]
imu = "0.7.3"

chrono = "0.4"
once_cell = "1.2"
parking_lot = "0.12"
