[package]
name = "kos-kbot"
version = "0.1.3"
authors = [
    "Benjamin Bolte <ben@kscale.dev>",
    "Denys Bezmenov <denys@kscale.dev>",
    "Jingxiang Mo <jx@kscale.dev>",
    "Pawel Budzianowski <pawel@kscale.dev>",
    "Wesley Maa <wesley@kscale.dev>",
]
edition = "2021"
license = "MIT"
repository = "https://github.com/kscalelabs/kos-kbot"
description = "KOS platform for KBot"

[features]
default = ["imu_hiwonder"]
imu_hiwonder=[]
imu_hexmove=[]
imu_bno055=[]

[dependencies]
serialport = "4.7"
kos = "0.7.10"
# kos = {path="./third_party/kos/kos/"}
kbot-pwrbrd = "0.2.2"
eyre = "0.6"
krec = "0.2"
tracing = "0.1"
async-trait = "0.1"
robstride = { version = "0.3.4", features = ["instant_command"] }
gstreamer = "0.20"
gstreamer-app = "0.20"
serde_json = "1.0"
gstreamer-video = "0.20"
uuid = { version = "1", features = ["v4"] }
tokio = { version = "1", features = ["full", "tracing"] }
tracing-subscriber = "0.3"
prost-types = "0.13.5"
[target.'cfg(target_os = "linux")'.dependencies]
imu = "0.7.3"

chrono = "0.4"
once_cell = "1.2"
parking_lot = "0.12"
